# nft_parachain

./: Cargo.toml  README.md
pallets/nft/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  nft.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
