[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'test-runtime-wasm'
version = '1.0.0'
[dependencies.test-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['test-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
